--- a/src/ecommerce.example.api/WebAPI/WebAPI.csproj
+++ b/src/ecommerce.example.api/WebAPI/WebAPI.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <Folder Include="Controllers\Dtos" />
     <Folder Include="logs\" />
+    <Folder Include="wwwroot\documents\brandAvatars\" />
   </ItemGroup>
 
 </Project>
